Fix text in searchbox to work on mobile

--- a/css/search.css
+++ b/css/search.css
@@ -119,7 +119,7 @@
 			padding-left: .6rem;
 			padding-right: 8px;
 			font-size: 16px;
-			font-size: 1.6rem;
+			font-size: 1.6em;
 			margin: 10px auto;
 			border: 0;
 			outline: 2px solid #F57920;
